--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           </head>
           <body>
             <div align="center">
-                <h1>YOUR NAME HERE</h1>
+                <h1>Linh Pham</h1>
                 <h2>Software Developer</h2>
                 <hr>
                 <h3>About Me:</h3>
